# imxInsightsCli

./: .gitignore  Makefile  README.md  pyproject.toml  settings.json  setup.cfg
.github/workflows/: build_cli_apps.yml  tester.yaml  tester.yml
imxInsightsCli/: __init__.py
imxInsightsCli/imxDiffCli/: generic.py  imx.py  imx_diff.py  ouput.py  scope_add.py  uitwisselscope.py  version_check.py
imxInsightsCli/imx_diff/: generic.py  imx.py  imx_diff.py  ouput.py  scope_add.py  uitwisselscope.py
