[project]
name = "imxInsightsCli"
description = "python imx insights CLI apps"

authors = [
    { name = "Hzd", email = "Hazedd@users.noreply.github.com" },
]
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
requires-python = "~=3.10"

dependencies = [
    "imxInsights",
    "pyinstaller",
    "rich",
    "console-menu",
    "openpyxl",
    "textual-fspicker",
    "textual",
    "Jinja2",
    "nest-asyncio",  # todo: remove when included in core
]

[project.optional-dependencies]

dev = [
    "black",
    "bumpversion",
    "flake8-black",
    "flake8-docstrings",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.isort]
profile = "black"
skip = []

[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --ignore=test_build.py"
markers = [
  "slow: Run tests that use sample data from file",
  "serial"
]
testpaths = [
    "tests"
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
